--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -1,21 +1,22 @@
+.navbar-brand {
+  margin-right: 2rem;
+}
+
 .navbar-dark .navbar-nav .nav-link {
   color: rgba(255,255,255,.5);
+  margin-right: 2rem;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
-  color: $code-color;
+  color: aqua;
 }
 
-.nav-item:hover .nav-link .ico-disp {
-  display: none;
-}
-
-.nav-item:hover .nav-link:after {
-  content: 'Home';
+.ico-disp {
+  font-size: 1rem;
 }
 
 .main-desc {
-  color: $code-color;
+  color: #fff;
   font-family: "Courier";
   font-size: 2rem;
   white-space: nowrap;
@@ -54,7 +55,7 @@
 }
 
 .main-desc-padd {
-  margin-top: 50%;
+  margin-top: 40%;
 }
 
 .skill-test {
@@ -62,6 +63,22 @@
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   margin-left: 2rem;
+  margin-bottom: 3rem;
+}
+
+.contact-link {
+  border: 1px solid aqua;
+  border-radius: 3px;
+  color: aqua;
+  margin-left: 2rem;
+  padding: .5rem 2rem;
+  text-decoration: none;
+}
+
+.contact-link:hover {
+  background-color: aqua;
+  color: #252627;
+  text-decoration: none;
 }
 
 .fade-in {
@@ -126,11 +143,11 @@
 /* Sneaky animation */
 .eye {
   width: 20px; height: 8px;
-  background-color: rgba(240,220,220,1);
+  background-color: aqua;
   border-radius: 0px 0px 20px 20px;
   position: relative;
   left: 10px; top: 40px;
-  box-shadow:  40px 0px 0px 0px rgba(240,220,220,1);              
+  box-shadow:  40px 0px 0px 0px aqua;              
 }
 
 .head {
